--- a/css/styles.css
+++ b/css/styles.css
@@ -11,13 +11,11 @@ ul, ol {
 }
 
 li { 
-    /* Elinminar los bullets de las listas */
     list-style-type: none;
 }
 
 a {
     text-decoration: none;
-    /* Eliminar el color azul del los links */
 }
 
 
@@ -142,8 +140,10 @@ header {
 }
 
 .product-actions a {
-    border-radius: 4px; /* Bordes redondeados */
+    border-radius: 4px; 
     gap: 10px;
+    color: black;
+    text-decoration: underline;
 }
 
 .add-more {
@@ -156,3 +156,180 @@ header {
     justify-content: center;
     align-items: center;
 }
+
+
+
+
+
+
+
+
+
+
+/*Log in*/
+.body-login {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.login-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    
+}
+
+.login-box {
+    background-color: white;
+    border-radius: 8px;
+    padding: 30px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+    max-width: 500px;
+    width: 90%;
+    text-align: center;
+    margin-right: 20px; 
+}
+
+.titulo-login {
+    font-size: 28px;
+    margin-bottom: 20px;
+    color: #333;
+}
+
+.form-group {
+    margin-bottom: 20px;
+    text-align: left;
+}
+
+label {
+    display: block;
+    font-size: 16px;
+    color: #626161;
+    margin-bottom: 5px;
+}
+
+input {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #d0d0d0;
+    border-radius: 6px;
+    font-size: 16px;
+}
+
+.login-button {
+    background-color: #2575fc;
+    color: white;
+    padding: 12px 18px;
+    border: none;
+    border-radius: 6px;
+    font-size: 18px;
+    cursor: pointer;
+    width: 100%;
+    margin-top: 15px;
+}
+
+.login-button:hover {
+    background-color: #1a5bb8;
+    transition: 0.3s ease;
+}
+
+.links-login {
+    margin-top: 15px;
+    font-size: 14px;
+}
+
+.links-login a {
+    color: #2575fc;
+    text-decoration: none;
+}
+
+.links-login a:hover {
+    text-decoration: underline;
+}
+
+
+
+
+
+
+
+
+
+/*Registro*/
+
+header {
+    position: relative;
+    align-items: center;
+    padding-bottom: 1px;
+}
+
+.register-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 10px;
+    margin: 50px auto;
+    width: 50%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+
+.checkbox-group {
+    display: flex;
+    align-items: center;
+}
+
+
+.boton-registro button {
+    background-color: #223A5E;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    justify-content: center;
+    display: block;
+    margin: 0 auto; 
+}
+
+.boton-registro button:hover {
+    background-color: #1a2f4e;
+}
+
+.boton-registro {
+    margin-top: 15px;
+}
+
+@media screen and (max-width: 768px) {
+    .register-form {
+        width: 90%;
+        padding: 10px;
+    }
+    
+    .Navegacion {
+        display: none; 
+    }
+    
+    .Navegacion.mobile-menu {
+        display: flex;
+        flex-direction: column;
+        background-color: #dce7fc;
+        padding: 10px;
+    }
+}
+
+@media screen and (max-width: 420px) {
+    .register-form {
+        margin: 20px auto;
+    }
+}
+
+
